
[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = [
    # ignore Numba internal warnings about NumPy type aliases
    'ignore::DeprecationWarning:numba.core.types.*',
    'ignore::DeprecationWarning:numba.core.ir_utils.*',
]
