[metadata]
name = vorts
author = Zachary Moon
description = Integration and visualization of point vortex dynamics in two dimensions
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
python_requires = >= 3.8
install_requires =
    cycler
    julia  # pyjulia
    makefun
    matplotlib
    numba
    numpy
    scipy
    tqdm
    xarray

[options.extras_require]
docs =
    pdoc3

[options.package_data]
vorts =
    f/src/*

[isort]
profile = black
skip_gitignore = true
force_to_top = true
line_length = 100
default_section = THIRDPARTY
known_first_party = vorts

[flake8]
max-line-length = 100
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    W503 # line break before binary operator
    E226 # missing whitespace around arithmetic operator - not always more readable imho
exclude=
    .eggs
    doc
    .jupyter
    .ipynb_checkpoints
