[metadata]
name = vorts
author = Zachary Moon
description = Integration and visualization of point vortex dynamics in two dimensions
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
python_requires = >= 3.8
install_requires =
    cycler
    makefun
    matplotlib
    numba
    numpy
    scipy
    tqdm
    xarray

[options.extras_require]
julia =
    julia  # pyjulia
    diffeqpy
complete =
    %(julia)s
docs =
    pdoc3

[options.package_data]
vorts =
    f/src/*

[isort]
profile = black
skip_gitignore = true
force_to_top = true
line_length = 100
default_section = THIRDPARTY
known_first_party = vorts

[flake8]
max-line-length = 100
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    # module level import not at top of file
    E402
    # line too long - let black worry about that
    E501
    # line break before binary operator
    W503
    # missing whitespace around arithmetic operator - not always more readable imho
    E226
exclude=
    .eggs
    doc
    .jupyter
    .ipynb_checkpoints
